=== RubyOSA 0.2.0 ===

2007-02-01  Laurent Sansonetti  <lsansonetti@apple.com>

	* rubyosa.gemspec:
	Updated for 0.2.0.

2006-12-29  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa.c:
	- Made the UTF8 strings optional and disabled by default ;
	- Fixed the TIFF conversion to OSA ;
	- Handle application errors and convert them as Ruby exceptions.

	* sample/iTunes_control.rb,
	  sample/iTunes_inspect.rb:
	Activate UTF8 strings.

2006-12-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* NEWS:
	Revised for the next release.

	* src/lib/rbosa:
	Added 'class' to the list of reserved Ruby keywords to prefix when generating
	method parameters.

2006-12-27  Vincent Isambart  <vincent.isambart@gmail.com>

	* src/lib/rbosa.rb:
	- Fixed a bug when generating setter methods ;
	- Uses UTF8 strings by default.

2006-12-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* sample/TextEdit_hello_world.rb:
	Removed experimental code.

2006-12-07  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Suffix method names that are already registered with an integer value
	  instead of prefixing with 'osa_' as there might be more than 2 duplicates ;
	- Register the ID property if not already defined.

2006-11-20  Jean-Pierre M.  <jeanpierre@gmail.com>

	* sample/iTunes_artwork.rb:
	Use the artwork format as the temporary file extension.

2006-11-20  Laurent Sansonetti  <lsansonetti@apple.com>

	* README:
	Revised.

	* src/rbosa.c:
	Make sure to swap the data of 'type' coerced descriptors.

	* src/lib/rbosa.rb:
	- Better translation of 'type' from OSA to Ruby ;
	- Support for some picture types ;
	- Fixed conversion handlers to not use 'self'.

	* sample/iTunes_artwork.rb,
	  sample/iChat_image.rb:
	Added new samples.

2006-11-19  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Convert four char codes to the Mac Roman encoding before using them,
	  as otherwise they could be considered as 5 bytes strings (ex. BBEdit) ;