@@ -6,4 +6,5 @@ Aaron Patterson <aaron.patterson@gmail.com>
 James MacAulay <jmacaulay@gmail.com>
 Michael Pruett <michael@68k.org>
 Sebastian Delmont <sd@notso.net>
+Stefan Saasen <s@juretta.com>
 Vincent Isambart <vincent.isambart@gmail.com>
