@@ -1,3 +1,13 @@
+2007-02-07  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* AUTHORS:
+	Added Stefan.
+
+2007-02-07  Stefan Saasen  <s@juretta.com>
+
+	* sample/AddressBook_inspect.rb:
+	New sample code, that prints all contacts in the Address Book.  
+
 === RubyOSA 0.2.0 ===
 
 2007-02-01  Laurent Sansonetti  <lsansonetti@apple.com>
